--- a/components/Nav/nav.module.sass
+++ b/components/Nav/nav.module.sass
@@ -7,18 +7,18 @@
   width: calc(100% - 60px)
   padding: 0 30px
   position: fixed
+  height: 60px
   background-color: $primary-color
   a
     display: flex
     justify-content: space-between
     align-items: center
     color: $accent-color
-    width: 140px
     text-decoration: none
     svg
       path, circle
         transition: .3s
-    h2
+    h3
       transition: .3s
       text-transform: uppercase
     &:hover
