--- a/components/Nav/nav.module.sass
+++ b/components/Nav/nav.module.sass
@@ -9,6 +9,7 @@
   position: fixed
   height: 60px
   background-color: $primary-color
+  z-index: 2
   a
     display: flex
     justify-content: space-between
