--- a/components/Services/services.module.sass
+++ b/components/Services/services.module.sass
@@ -18,3 +18,25 @@
       color: #F57170
       text-align: center
 
+@media screen and (max-width: 700px)
+  .main
+    height: auto
+    flex-wrap: wrap
+    div
+      display: flex
+      justify-content: center
+      align-items: center
+      margin: 5px
+      svg
+        height: 30px
+        width: 30px
+        path
+          fill: #F57170
+      .svg
+        path
+          fill: transparent
+          stroke: #F57170
+      p
+        text-decoration: none
+        color: #F57170
+        text-align: center
