--- a/styles/works.module.sass
+++ b/styles/works.module.sass
@@ -20,22 +20,45 @@
 
 
 .popupText
+  padding-left: 30px
+  padding-bottom: 30px
+  padding-top: 30px
   display: flex
   flex-direction: column
   align-items: center
   justify-content: center
+  background-color: #3A4750
+  p
+    padding: 0 30px
+    width: calc(100% - 60px)
+    color: white
+    line-height: 20px
   button
     margin-top: 20px
 
 .infoTitleContainer
+  padding-left: 30px
   display: flex
-  justify-content: flex-start
+  justify-content: space-between
   align-items: flex-end
   cursor: pointer
+  h1
+    color: #3A4750
 
 .getMoreInfo
   display: flex
   justify-content: center
   align-items: center
+  min-width: 200px
   h5
     margin-left: 20px
+
+@media screen and (max-width: 700px)
+  .infoTitleContainer
+    padding-left: 5px
+    flex-direction: column
+    align-items: center
+    h1
+      font-size: 20px
+      text-align: center
+      width: 100%
