--- a/styles/FeedBack.module.sass
+++ b/styles/FeedBack.module.sass
@@ -28,6 +28,7 @@
     border: 1px solid #F57170
     transition: .3s
     color: #F57170
+    outline: 0
     &:hover
       border: 1px solid black
       color: black
@@ -47,6 +48,7 @@
   height: 200px
   padding: 5px
   margin-top: 20px
+  outline: 0
 .sendFeed
   border: 1px solid #A9A9A9
   background-color: transparent
@@ -76,7 +78,7 @@
   border-bottom: 2px solid #A9A9A9
   font-size: 20px
   width: 200px
-
+  outline: 0
 .checkBoxCustom
   margin-left: 5px
   border: 1px solid #303841
@@ -165,7 +167,7 @@
     margin-left: 20px
 
 .refMenuFromFeed
-  background-color: black
+  background-color: #3A4750
   width: 100%
   margin-top: 20px
 
