--- a/components/Partners/partners.module.sass
+++ b/components/Partners/partners.module.sass
@@ -1,18 +1,17 @@
-.goods
+@import "styles/sassSetup"
+
+.partnerItem
   border-radius: 5px
   width: 250px
-  top: 50%
   margin: 20px
   border: 1px solid rgba(0,0,0,0.3)
+  text-decoration: none
   h2
     font-size: 30px
     text-transform: uppercase
     text-align: center
-    color: #FFFFFF
-  p
-    color: #FFFFFF
-    text-align: center
-    padding: 10px 0
+    color: $accent-color
+
 
 .imageGood
   width: 240px
