--- a/components/FeedBackSubLink/feedBackSubLink.module.sass
+++ b/components/FeedBackSubLink/feedBackSubLink.module.sass
@@ -20,7 +20,10 @@
       color: #F57170
       width: 200px
       height: 20px
-
+    a:hover
+      background-color: #F57170
+      color: black
+      transition: 1.5s
 
 .feed
   display: flex
