--- a/components/Header/header.module.sass
+++ b/components/Header/header.module.sass
@@ -35,8 +35,10 @@
 @keyframes slider
   from
     background-image: url("../../public/images/background1.jpg")
-  50%
+  80%
     background-image: url("../../public/images/image 4.jpg")
+  50%
+    background-image: url("../../public/images/stena12.jpg")
   to
     background-image: url("../../public/images/background1.jpg")
 
