--- a/styles/FeedBack.module.sass
+++ b/styles/FeedBack.module.sass
@@ -56,6 +56,7 @@
   font-size: 20px
   cursor: pointer
   margin-top: 20px
+  outline: 0
   display: flex
   align-self: flex-end
   padding: 10px 55px
