--- a/components/Partners/partners.module.sass
+++ b/components/Partners/partners.module.sass
@@ -11,6 +11,10 @@
     text-transform: uppercase
     text-align: center
     color: $accent-color
+  p
+    color: $primary-color
+    text-decoration: none
+    text-align: center
 
 
 .imageGood
@@ -20,5 +24,8 @@
   border-top-right-radius: 5px
   padding: 5px
   background-color: white
+  display: flex
+  justify-content: center
+  align-items: center
   img
     width: calc(100% - 10px)
