--- a/components/Goods/goods.module.sass
+++ b/components/Goods/goods.module.sass
@@ -28,6 +28,9 @@
   border-top-right-radius: 5px
   padding: 5px
   background-color: white
+  display: flex
+  justify-content: center
+  align-items: center
   img
     width: calc(100% - 10px)
 
