--- a/styles/detailInfo.module.sass
+++ b/styles/detailInfo.module.sass
@@ -76,3 +76,16 @@
     line-height: 20px
   button
     margin-top: 20px
+
+
+
+
+@media screen and (max-width: 700px)
+  .infoTitleContainer
+    padding-left: 5px
+    flex-direction: column
+    align-items: center
+    h1
+      font-size: 20px
+      text-align: center
+      width: 100%
