--- a/components/Services/services.module.sass
+++ b/components/Services/services.module.sass
@@ -7,7 +7,13 @@
   align-items: center
   div
     cursor: pointer
+    display: flex
+    justify-content: center
+    align-items: center
+    flex-direction: column
     svg
+      height: 70px
+      width: 70px
       path
         fill: #F57170
     .svg
