--- a/styles/works.module.sass
+++ b/styles/works.module.sass
@@ -53,6 +53,13 @@
   h5
     margin-left: 20px
 
+.videoContainer
+  width: 100%
+  display: flex
+  justify-content: center
+  align-items: center
+  flex-wrap: wrap
+
 @media screen and (max-width: 700px)
   .infoTitleContainer
     padding-left: 5px
